# proyecto1_arquitectura

./: CMakeLists.txt  README.md  estructura.txt  fluid.cpp  run.sh  script.sh
fluid/: Makefile  cmake_install.cmake  fluid.cpp
outputs/: large.fld
progargs/: progargs.hpp
sim/: Makefile  block.cpp  block.hpp  cmake_install.cmake  grid.cpp  grid.hpp  progargs.cpp  progargs.hpp
